# Elaborato_Programazione_Lista_Spesa

./: .gitignore  Abbigliamento.cpp  Abbigliamento.h  Altro.cpp  Altro.h  Bevande.cpp  Bevande.h  CMakeLists.txt  Elettronica.cpp  Elettronica.h  Forno.cpp  Forno.h  FruttaEVerdura.cpp  FruttaEVerdura.h  Igiene.cpp  Igiene.h  ListaDellaSpesa.cpp  ListaDellaSpesa.h  Macelleria.cpp  Macelleria.h  Observer.cpp  Observer.h  Pescheria.cpp  Pescheria.h  ProdottiDaBagno.cpp  ProdottiDaBagno.h  Prodotto.cpp  Prodotto.h  Pulizia.cpp  Pulizia.h  Subject.cpp  Subject.h  Utente.cpp  Utente.h  main.cpp
Test/: CMakeLists.txt  ObserverTest.cpp  ProductTest.cpp  RunAllTests.cpp  ShoppingListTest.cpp  UserTest.cpp
