cmake_minimum_required(VERSION 3.25)
project(Prova_Elaborato_Programazione_Lista_Spesa)

set(CMAKE_CXX_STANDARD 23)

add_executable(Prova_Elaborato_Programazione_Lista_Spesa main.cpp Prodotto.h Forno.h Prodotto.cpp Bevande.h Bevande.cpp Forno.cpp Macelleria.h Macelleria.cpp Pescheria.h FruttaEVerdura.h Elettronica.h Elettronica.cpp Abbigliamento.h Pulizia.h ProdottiDaBagno.h ProdottiDaBagno.cpp Igiene.h Altro.h ListaDellaSpesa.h Abbigliamento.cpp Altro.cpp FruttaEVerdura.cpp Igiene.cpp Pescheria.cpp Pulizia.cpp ListaDellaSpesa.cpp ListaDellaSpesa.cpp Subject.h Subject.cpp Observer.h Observer.cpp)
